Risoluzione issue SonarCloud